--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <title>Grupo Rotoplas Argentina - Inicio</title>
 </head>
 <body>
-    
+    <nav>
+        Navegacion
+    </nav>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col">
+                <p>Contenidos</p>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
