Grupo Rotoplas Argentina

--- a/footer.html
+++ b/footer.html
@@ -3,11 +3,11 @@
 		<h2>Contáctanos</h2>
 		<p class="footer-contacto-btn d-inline-block text-left">
 			<a class="hvr-forward" href="contacto/">
-				<img src="images/footer-contacto.svg" width="40" alt="Contacto" title="Contacto">&nbsp;&nbsp;<span>Contacto</span>
+				<img src="http://127.0.0.1:5500/images/footer-contacto.svg" width="40" alt="Contacto" title="Contacto">&nbsp;&nbsp;<span>Contacto</span>
 			</a>
 			<br><br>
 			<a class="hvr-forward" href="tel:8005063000">
-				<img src="images/footer-telefono.svg" width="40" alt="Teléfono" title="Teléfono">&nbsp;&nbsp;<span>800 506 3000</span>
+				<img src="http://127.0.0.1:5500/images/footer-telefono.svg" width="40" alt="Teléfono" title="Teléfono">&nbsp;&nbsp;<span>800 506 3000</span>
 			</a>
 		</p>
 		<p>
@@ -40,13 +40,13 @@
 	<div class="col-12 | col-sm-6 | col-lg-3 | pb-3">
 		<h2 class="white">Síguenos</h2>
 		<a class="hvr-forward d-block mt-3" href="https://twitter.com/rotoplasmexico" target="_blank">
-			<img src="images/footer-twitter.svg" width="40" alt="Twitter" title="Twitter">&nbsp;&nbsp;Twitter
+			<img src="http://127.0.0.1:5500/images/footer-twitter.svg" width="40" alt="Twitter" title="Twitter">&nbsp;&nbsp;Twitter
 		</a>
 		<a class="hvr-forward d-block mt-3" href="https://www.linkedin.com/company/grupo-rotoplas/" target="_blank">
-			<img src="images/footer-linkedin.svg" width="36" alt="Linkedin" title="Linkedin">&nbsp;&nbsp;LinkedIn
+			<img src="http://127.0.0.1:5500/images/footer-linkedin.svg" width="36" alt="Linkedin" title="Linkedin">&nbsp;&nbsp;LinkedIn
 		</a>
 		<a class="hvr-forward d-block mt-3" href="https://www.instagram.com/gruporotoplas/?hl=es-la" target="_blank">
-			<img src="images/footer-instagram.svg" width="36" alt="Instagram" title="Instagram">&nbsp;&nbsp;Instragram
+			<img src="http://127.0.0.1:5500/images/footer-instagram.svg" width="36" alt="Instagram" title="Instagram">&nbsp;&nbsp;Instragram
 		</a>
 	</div>
 </div>
