--- a/menu.html
+++ b/menu.html
@@ -1,5 +1,5 @@
 <a href="#" class="navbar-brand">
-	<img id="navegacion-logo" src="images/rotoplas_logo_blanco_azul.svg" alt="Logotipo Rotoplas" title="Rotoplas">
+	<img id="navegacion-logo" src="http://127.0.0.1:5500/images/rotoplas_logo_blanco_azul.svg" alt="Logotipo Rotoplas" title="Rotoplas">
 </a>
 
 <button 
@@ -28,28 +28,18 @@
 			</select>
 		</li>
 		<li class="nav-item mx-xl-1"><a class="nav-link navegacion-extra" href="#">Únete al equipo</a></li>
-		<li class="nav-item mx-xl-1"><a class="nav-link navegacion-extra" href="#">Contacto</a></li>
+		<li class="nav-item mx-xl-1"><a class="nav-link navegacion-extra" href="/contacto/">Contacto</a></li>
 	</ul>
 	<ul class="navegacion-segunda-linea navbar-nav ms-auto text-center mt-2">
 		<li class="nav-item dropdown">
 			<a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">Nosotros</a>
 			<ul class="dropdown-menu">
-				<li><a class="dropdown-item" href="#">Nuestra historia</a></li>
-				<li><a class="dropdown-item" href="#">Compromisos y Certificaciones</a></li>
-				<li><a class="dropdown-item" href="#">Quiénes Somos</a></li>
+				<li><a class="dropdown-item" href="/quienes-somos/">¿Quiénes Somos?</a></li>
+				<li><a class="dropdown-item" href="/nuestra-historia-en-argentina/">Nuestra historia en Argentina</a></li>
 			</ul>
 		</li>
-		<li class="nav-item dropdown">
-			<a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">Soluciones</a>
-			<ul class="dropdown-menu">
-				<li><a class="dropdown-item" href="#">Productos</a></li>
-				<li><a class="dropdown-item" href="#">Servicios</a></li>
-			</ul>
-		</li>
-		<li class="nav-item mx-xl-1"><a class="nav-link menu-color-principal" href="#">Nuestras Marcas</a></li>
-		<li class="nav-item mx-xl-1"><a class="nav-link menu-color-principal" href="sala-de-prensa/">Sala de prensa</a></li>
+		<li class="nav-item mx-xl-1"><a class="nav-link menu-color-principal" href="/nuestras-marcas/">Nuestras Marcas</a></li>
 		<li class="nav-item mx-xl-1"><a class="nav-link menu-color-principal" href="https://rotoplas.com/sustentabilidad/" target="_blank">Sustentabilidad</a></li>
 		<li class="nav-item mx-xl-1"><a class="nav-link menu-color-principal" href="https://rotoplas.com/inversionistas/" target="_blank">Inversionistas</a></li>
-		<li class="nav-item mx-xl-1"><a class="nav-link menu-color-principal" href="https://innwai.rotoplas.com" target="_blank">Innovación</a></li>
 	</ul>
 </div>
