Ajustes para los links de imagenes, enlaces, estilos, scripts, etc

--- a/quienes-somos/index.html
+++ b/quienes-somos/index.html
@@ -4,21 +4,21 @@
 		<meta charset="UTF-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>Grupo Rotoplas Argentina</title>
+		<title>Grupo Rotoplas Argentina - ¿Quiénes Somos?</title>
 		<!-- Bootstrap CSS -->
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-		<link rel="stylesheet" href="/css/style.css">
-        <link rel="stylesheet" href="/css/quienes-somos.css">
+		<link rel="stylesheet" href="http://127.0.0.1:5500/css/style.css">
+        <link rel="stylesheet" href="http://127.0.0.1:5500/css/quienes-somos.css">
 		<!-- Slick / Slider CSS -->
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.css" integrity="sha512-yHknP1/AwR+yx26cB1y0cjvQUMvEa2PFzt1c9LlS4pRQ5NOTZFWbhBig+X9G9eYW/8m0/4OXNx8pxJ6z57x0dw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick-theme.min.css" integrity="sha512-17EgCFERpgZKcm0j0fEq1YCJuyAWdz9KUtv1EjVuaOz8pDnh/0nZxmU6BBXwaaxqoi9PQXnRWqlcDB027hgv9A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 		<!-- Js -->
-		<script src="/js/w3-include-html.js"></script>
+		<script src="http://127.0.0.1:5500/js/w3-include-html.js"></script>
 	</head>
 
 	<body>
         <!-- Navegacion -->
-		<nav id="navegacion" class="navbar navbar-expand-xl px-3" w3-include-html="/menu.html"></nav>
+		<nav id="navegacion" class="navbar navbar-expand-xl px-3" w3-include-html="http://127.0.0.1:5500/menu.html"></nav>
 		<!-- Contenidos -->
 		<div class="container-fluid">
             <!-- Header -->
@@ -55,42 +55,42 @@
 				</div>
 				<div id="nosotros-contadores" class="col-12 mt-3 pt-3 d-flex gap-3 flex-wrap justify-content-center align-items-start">
 					<div class="nosotros-nodo">
-						<img src="/images/quienes-somos/nosotros-mundo.jpg" alt="Presencia en 14 paises" title="Presencia en 14 paises">
+						<img src="http://127.0.0.1:5500/images/quienes-somos/nosotros-mundo.jpg" alt="Presencia en 14 paises" title="Presencia en 14 paises">
 						<p class="fs30 lhn bold blue5 nosotros-contadores-datos">14</p>
 						<p>Presencia en 14 paises</p>
 					</div>
 					<div class="nosotros-nodo">
-						<img src="/images/quienes-somos/nosotros-lineas.jpg" alt="Líneas de producto" title="Líneas de producto">
+						<img src="http://127.0.0.1:5500/images/quienes-somos/nosotros-lineas.jpg" alt="Líneas de producto" title="Líneas de producto">
 						<p class="fs30 lhn bold blue5 nosotros-contadores-datos">27</p>
 						<p>Líneas de producto</p>
 					</div>
 					<div class="nosotros-nodo">
-						<img src="/images/quienes-somos/nosotros-plantas.jpg" alt="Plantas" title="Plantas">
+						<img src="http://127.0.0.1:5500/images/quienes-somos/nosotros-plantas.jpg" alt="Plantas" title="Plantas">
 						<p class="fs30 lhn bold blue5 nosotros-contadores-datos">17</p>
 						<p>Plantas</p>
 					</div>
 					<div class="nosotros-nodo">
-						<img src="/images/quienes-somos/nosotros-centros.jpg" alt="Centros de distribución" title="Centros de distribución">
+						<img src="http://127.0.0.1:5500/images/quienes-somos/nosotros-centros.jpg" alt="Centros de distribución" title="Centros de distribución">
 						<p class="fs30 lhn bold blue5">3</p>
 						<p>Centros de distribución</p>
 					</div>
 					<div class="nosotros-nodo">
-						<img src="/images/quienes-somos/nosotros-colaboradores.jpg" alt="Colaboradores" title="Colaboradores">
+						<img src="http://127.0.0.1:5500/images/quienes-somos/nosotros-colaboradores.jpg" alt="Colaboradores" title="Colaboradores">
 						<p class="fs30 lhn bold blue5 nosotros-contadores-datos">3322</p>
 						<p>Colaboradores</p>
 					</div>
 					<div class="nosotros-nodo">
-						<img src="/images/quienes-somos/nosotros-clientes.jpg" alt="Clientes directos" title="Clientes directos">
+						<img src="http://127.0.0.1:5500/images/quienes-somos/nosotros-clientes.jpg" alt="Clientes directos" title="Clientes directos">
 						<p class="fs30 lhn bold blue5 nosotros-contadores-datos">12000</p>
 						<p>Distribuidores</p>
 					</div>
 					<div class="nosotros-nodo">
-						<img src="/images/quienes-somos/nosotros-puntos.jpg" alt="Puntos de venta" title="Puntos de venta">
+						<img src="http://127.0.0.1:5500/images/quienes-somos/nosotros-puntos.jpg" alt="Puntos de venta" title="Puntos de venta">
 						<p class="fs30 lhn bold blue5 nosotros-contadores-datos">29000</p>
 						<p>Puntos de venta</p>
 					</div>
 					<div class="nosotros-nodo">
-						<img src="/images/quienes-somos/nosotros-servicio.jpg" alt="Puntos de servicio" title="Puntos de servicio">
+						<img src="http://127.0.0.1:5500/images/quienes-somos/nosotros-servicio.jpg" alt="Puntos de servicio" title="Puntos de servicio">
 						<p class="fs30 lhn bold blue5 nosotros-contadores-datos">50000</p>
 						<p>Puntos de servicio</p>
 					</div>
@@ -102,13 +102,13 @@
 					<p>La innovación es parte de nuestro ADN por lo que cada año destinamos un presupuesto para el área de Investigación y Desarrollo.</p>
 				</div>
 				<div class="co-12 | col-sm-6 | col-md-5 | col-lg-4 | p-3">
-					<img class="w-100" src="/images/quienes-somos/nosotros-productos.jpg" alt="Productos Imagen">
+					<img class="w-100" src="http://127.0.0.1:5500/images/quienes-somos/nosotros-productos.jpg" alt="Productos Imagen">
 				</div>
 			</div>
 			<!-- Somos -->
 			<div class="d-flex flex-column-reverse align-items-center justify-content-around | flex-sm-row">
 				<div class="co-12 | col-sm-6 | col-md-5 | col-lg-4 | p-3">
-					<img class="w-100" src="/images/quienes-somos/nosotros-planta.jpg" alt="Planta Imagen">
+					<img class="w-100" src="http://127.0.0.1:5500/images/quienes-somos/nosotros-planta.jpg" alt="Planta Imagen">
 				</div>
 				<div class="co-12 | col-sm-6 | col-md-5 | col-lg-4 | p-3">
 					<p>Somos el primer emisor corporativo de México emitir el primer bono sustentable, el cual estaba destinado al impulso de proyectos relacionados con el agua. El año pasado reafirmamos nuestro compromiso con este tipo de acciones y decidimos hacer una reapertura del bono.</p>
@@ -121,15 +121,15 @@
 					<p class="mt-3">Explora estas secciones que pueden ser de tu interés</p>
 				</div>
 				<div class="col-12 text-center">
-					<a class="hvr-float mx-3 p-3" href="/nuestra-historia-en-argentina/">
-						<img class="d-inline-block" src="/images/historia/historia.png" alt="Nuestra Histroria" title="Nuestra Historia">
+					<a class="hvr-float mx-3 p-3" href="http://127.0.0.1:5500/nuestra-historia-en-argentina/">
+						<img class="d-inline-block" src="http://127.0.0.1:5500/images/historia/historia.png" alt="Nuestra Histroria" title="Nuestra Historia">
 						<p class="d-inline-block align-middle m-0">Nuestra Historia</p>
 					</a>
 				</div>
 			</div>
 		</div>
 		<!-- Footer -->
-		<footer w3-include-html="/footer.html" class="container-fluid bg-blue5"></footer>
+		<footer w3-include-html="http://127.0.0.1:5500/footer.html" class="container-fluid bg-blue5"></footer>
 		<!-- Scripts -->
 			<!-- jQery -->
 			<script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
@@ -138,7 +138,7 @@
 			<!-- Slick Js -->
 			<script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js" integrity="sha512-HGOnQO9+SP1V92SrtZfjqxxtLmVzqZpjFFekvzZVWoiASSQgSr4cw9Kqd2+l8Llp4Gm0G8GIFJ4ddwZilcdb8A==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 			<!-- script -->
-            <script src="/js/app.js"></script>
+            <script src="http://127.0.0.1:5500/js/app.js"></script>
 			<script>
 				var counter_flag = '0';
 				//
