--- a/footer.html
+++ b/footer.html
@@ -28,13 +28,13 @@
 	<div class="col-12 | col-sm-6 | col-lg-3 | pb-3">
 		<h2>Navega en el sitio</h2>
 		<ul>
-			<li><a class="hvr-forward" href="nosotros/quienes-somos/">&nbsp;&nbsp;Quiénes somos</a></li>
-			<li><a class="hvr-forward" href="nuestras-soluciones/productos/">&nbsp;&nbsp;Nuestras soluciones</a></li>
-			<li><a class="hvr-forward" href="https://rotoplas.com/sala-de-prensa/">&nbsp;&nbsp;Sala de prensa</a></li>
-			<li><a class="hvr-forward" href="https://rotoplas.com/sustentabilidad/" target="_blank">&nbsp;&nbsp;Sustentabilidad</a></li>
+			<li><a class="hvr-forward" href="/quienes-somos/">&nbsp;&nbsp;¿Quiénes somos?</a></li>
+			<li><a class="hvr-forward" href="/nuestra-historia-en-argentina/">&nbsp;&nbsp;Nuestra Historia en Argentina</a></li>
+			<li><a class="hvr-forward" href="/nuestras-marcas/">&nbsp;&nbsp;Nuestras Marcas</a></li>
+			<li><a class="hvr-forward" href="/sustentabilidad/">&nbsp;&nbsp;Sustentabilidad</a></li>
 			<li><a class="hvr-forward" href="https://rotoplas.com/inversionistas/" target="_blank">&nbsp;&nbsp;Inversionistas</a></li>
-			<li><a class="hvr-forward" href="https://innwai.rotoplas.com/" target="_blank">&nbsp;&nbsp;Innovación</a></li>
 			<li><a class="hvr-forward" href="https://rotoplas.com/careers/" target="_blank">&nbsp;&nbsp;Únete al equipo</a></li>
+			<li><a class="hvr-forward" href="/contacto/">&nbsp;&nbsp;Contacto</a></li>
 		</ul>
 	</div>
 	<div class="col-12 | col-sm-6 | col-lg-3 | pb-3">
