--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
 		<title>Grupo Rotoplas Argentina - Inicio</title>
 		<!-- Bootstrap CSS -->
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-		<link rel="stylesheet" href="css/style.css">
-        <link rel="stylesheet" href="css/inicio.css">
+		<link rel="stylesheet" href="http://127.0.0.1:5500/css/style.css">
+        <link rel="stylesheet" href="http://127.0.0.1:5500/css/inicio.css">
 		<!-- Slick / Slider CSS -->
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.css" integrity="sha512-yHknP1/AwR+yx26cB1y0cjvQUMvEa2PFzt1c9LlS4pRQ5NOTZFWbhBig+X9G9eYW/8m0/4OXNx8pxJ6z57x0dw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick-theme.min.css" integrity="sha512-17EgCFERpgZKcm0j0fEq1YCJuyAWdz9KUtv1EjVuaOz8pDnh/0nZxmU6BBXwaaxqoi9PQXnRWqlcDB027hgv9A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 		<!-- Js -->
-		<script src="js/w3-include-html.js"></script>
+		<script src="http://127.0.0.1:5500/js/w3-include-html.js"></script>
 	</head>
 
 	<body>
@@ -140,7 +140,7 @@
 			<!-- Slick Js -->
 			<script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js" integrity="sha512-HGOnQO9+SP1V92SrtZfjqxxtLmVzqZpjFFekvzZVWoiASSQgSr4cw9Kqd2+l8Llp4Gm0G8GIFJ4ddwZilcdb8A==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 			<!-- script -->
-            <script src="js/app.js"></script>
-			<script src="js/inicio.js"></script>
+            <script src="http://127.0.0.1:5500/js/app.js"></script>
+			<script src="http://127.0.0.1:5500/js/inicio.js"></script>
 	</body>
 </html>
