--- a/menu.html
+++ b/menu.html
@@ -28,18 +28,18 @@
 			</select>
 		</li>
 		<li class="nav-item mx-xl-1"><a class="nav-link navegacion-extra" href="#">Únete al equipo</a></li>
-		<li class="nav-item mx-xl-1"><a class="nav-link navegacion-extra" href="/contacto/">Contacto</a></li>
+		<li class="nav-item mx-xl-1"><a class="nav-link navegacion-extra" href="http://127.0.0.1:5500/contacto/">Contacto</a></li>
 	</ul>
 	<ul class="navegacion-segunda-linea navbar-nav ms-auto text-center mt-2">
 		<li class="nav-item dropdown">
 			<a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">Nosotros</a>
 			<ul class="dropdown-menu">
-				<li><a class="dropdown-item" href="/quienes-somos/">¿Quiénes Somos?</a></li>
-				<li><a class="dropdown-item" href="/nuestra-historia-en-argentina/">Nuestra historia en Argentina</a></li>
+				<li><a class="dropdown-item" href="http://127.0.0.1:5500/quienes-somos/">¿Quiénes Somos?</a></li>
+				<li><a class="dropdown-item" href="http://127.0.0.1:5500/nuestra-historia-en-argentina/">Nuestra historia en Argentina</a></li>
 			</ul>
 		</li>
-		<li class="nav-item mx-xl-1"><a class="nav-link menu-color-principal" href="/nuestras-marcas/">Nuestras Marcas</a></li>
-		<li class="nav-item mx-xl-1"><a class="nav-link menu-color-principal" href="https://rotoplas.com/sustentabilidad/" target="_blank">Sustentabilidad</a></li>
+		<li class="nav-item mx-xl-1"><a class="nav-link menu-color-principal" href="http://127.0.0.1:5500/nuestras-marcas/">Nuestras Marcas</a></li>
+		<li class="nav-item mx-xl-1"><a class="nav-link menu-color-principal" href="http://127.0.0.1:5500/sustentabilidad/">Sustentabilidad</a></li>
 		<li class="nav-item mx-xl-1"><a class="nav-link menu-color-principal" href="https://rotoplas.com/inversionistas/" target="_blank">Inversionistas</a></li>
 	</ul>
 </div>
