--- a/nuestras-marcas/index.html
+++ b/nuestras-marcas/index.html
@@ -7,17 +7,17 @@
 		<title>Grupo Rotoplas Argentina - Nuestras Marcas</title>
 		<!-- Bootstrap CSS -->
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-		<link rel="stylesheet" href="/css/style.css">
-        <link rel="stylesheet" href="/css/nuestras-marcas.css">
+		<link rel="stylesheet" href="http://127.0.0.1:5500/css/style.css">
+        <link rel="stylesheet" href="http://127.0.0.1:5500/css/nuestras-marcas.css">
 		<!-- Slick / Slider CSS -->
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.css" integrity="sha512-yHknP1/AwR+yx26cB1y0cjvQUMvEa2PFzt1c9LlS4pRQ5NOTZFWbhBig+X9G9eYW/8m0/4OXNx8pxJ6z57x0dw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick-theme.min.css" integrity="sha512-17EgCFERpgZKcm0j0fEq1YCJuyAWdz9KUtv1EjVuaOz8pDnh/0nZxmU6BBXwaaxqoi9PQXnRWqlcDB027hgv9A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 		<!-- Js -->
-		<script src="/js/w3-include-html.js"></script>
+		<script src="http://127.0.0.1:5500/js/w3-include-html.js"></script>
 	</head>
 	<body>
         <!-- Navegacion -->
-		<nav id="navegacion" class="navbar navbar-expand-xl px-3" w3-include-html="/menu.html"></nav>
+		<nav id="navegacion" class="navbar navbar-expand-xl px-3" w3-include-html="http://127.0.0.1:5500/menu.html"></nav>
 		<!-- Contenidos -->
 		<div class="container-fluid">
             <!-- Header -->
@@ -42,7 +42,7 @@
 					<p>Rotoplas es una marca líder en América Latina con más de 40 años en el mercado y presencia en 14 países. Ofrece soluciones de almacenamiento para distintas necesidades de abastecimiento en hogares y agroindustria.</p>
 				</div>
 				<div class="col-12 | col-sm-6 | col-lg-4 offset-lg-2 | col-xl-4 offset-xl-2 | pe-0">
-					<img class="w-100" src="/images/nuestras-marcas/almacenamiento-head.jpg" alt="">
+					<img class="w-100" src="http://127.0.0.1:5500/images/nuestras-marcas/almacenamiento-head.jpg" alt="">
 				</div>
 			</div>
 			<!-- Tabs 2 -->
@@ -51,7 +51,7 @@
 					<p>IPS es una empresa pionera en la industria termoplástica que desde hace 70 años brinda soluciones innovadoras a instaladores profesionales del mundo, siendo el principal exportador de tuberías y conexiones en 35 países.</p>
 				</div>
 				<div class="col-12 | col-sm-6 | col-lg-4 offset-lg-2 | col-xl-4 offset-xl-2 | pe-0">
-					<img class="w-100" src="/images/nuestras-marcas/almacenamiento-head.jpg" alt="">
+					<img class="w-100" src="http://127.0.0.1:5500/images/nuestras-marcas/almacenamiento-head.jpg" alt="">
 				</div>
 			</div>
 			<!-- Tabs 3 -->
@@ -60,7 +60,7 @@
 					<p>Señorial es una empresa que desde hace 40 años brinda soluciones innovadoras de calentamiento a través del desarrollo de termotanques y calefones, llevando agua caliente a los hogares de Argentina.</p>
 				</div>
 				<div class="col-12 | col-sm-6 | col-lg-4 offset-lg-2 | col-xl-4 offset-xl-2 | pe-0">
-					<img class="w-100" src="/images/nuestras-marcas/almacenamiento-head.jpg" alt="">
+					<img class="w-100" src="http://127.0.0.1:5500/images/nuestras-marcas/almacenamiento-head.jpg" alt="">
 				</div>
 			</div>
             <!-- Explora -->
@@ -78,7 +78,7 @@
 			</div>
 		</div>
 		<!-- Footer -->
-		<footer w3-include-html="/footer.html" class="container-fluid bg-blue5"></footer>
+		<footer w3-include-html="http://127.0.0.1:5500/footer.html" class="container-fluid bg-blue5"></footer>
 		<!-- Scripts -->
 			<!-- jQery -->
 			<script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
@@ -87,7 +87,7 @@
 			<!-- Slick Js -->
 			<script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js" integrity="sha512-HGOnQO9+SP1V92SrtZfjqxxtLmVzqZpjFFekvzZVWoiASSQgSr4cw9Kqd2+l8Llp4Gm0G8GIFJ4ddwZilcdb8A==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 			<!-- script -->
-            <script src="/js/app.js"></script>
-			<script src="/js/nuestras-marcas.js"></script>
+            <script src="http://127.0.0.1:5500/js/app.js"></script>
+			<script src="http://127.0.0.1:5500/js/nuestras-marcas.js"></script>
 	</body>
 </html>
